// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeProvider /> snapshot should match snapshot 1`] = `
<ThemeProvider
  theme="darkBronzeWebex"
>
  <ThemeProvider
    className="mds-typography mds-elevation"
    themeclass="mds-theme-stable-darkBronzeWebex"
  >
    <mdc-themeprovider
      class="mds-typography mds-elevation"
      suppressHydrationWarning={true}
    >
      <IllustrationProvider>
        <mdc-illustrationprovider
          suppressHydrationWarning={true}
        >
          <IconProvider>
            <mdc-iconprovider
              suppressHydrationWarning={true}
            >
              <div
                className="md-theme-provider-wrapper md-theme-provider-globals"
              />
            </mdc-iconprovider>
          </IconProvider>
        </mdc-illustrationprovider>
      </IllustrationProvider>
    </mdc-themeprovider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`<ThemeProvider /> snapshot should match snapshot with style 1`] = `
<ThemeProvider
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ThemeProvider
    className="mds-typography mds-elevation"
    themeclass="mds-theme-stable-darkWebex"
  >
    <mdc-themeprovider
      class="mds-typography mds-elevation"
      suppressHydrationWarning={true}
    >
      <IllustrationProvider>
        <mdc-illustrationprovider
          suppressHydrationWarning={true}
        >
          <IconProvider>
            <mdc-iconprovider
              suppressHydrationWarning={true}
            >
              <div
                className="md-theme-provider-wrapper md-theme-provider-globals"
                style={
                  Object {
                    "color": "pink",
                  }
                }
              />
            </mdc-iconprovider>
          </IconProvider>
        </mdc-illustrationprovider>
      </IllustrationProvider>
    </mdc-themeprovider>
  </ThemeProvider>
</ThemeProvider>
`;
